# 3DRenderer

./: .gitignore  CMakeLists.txt  README.md
include/: constants.hpp  matrix4.hpp  mesh.hpp  renderer.hpp  tests.hpp  vector3.hpp
src/: main.cpp  matrix4.cpp  mesh.cpp  renderer.cpp  tests.cpp  vector3.cpp
